--- a/public/css/classcode.css
+++ b/public/css/classcode.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-color: #FEF7F7;
+    background-color: var(--bkg_white);
 }
 
 .main-ctr {
@@ -46,4 +46,39 @@ body {
     font-size: 8vw;
     text-align: center;
     color: var(--deep_purple);
+}
+
+button {
+    display: block;
+    border: 1.1px solid  var(--deep_purple);
+    width: 300px;
+    border-radius: 10px;
+    padding: 15px 0px;
+    margin: 30px auto 10px auto;
+
+    font-size: 20px;
+    outline: none;
+    border-style: none;
+    font-family: metropolisbold, sans-serif;
+    background-color:  var(--deep_purple);
+    color: #faf1f1;
+
+    cursor: pointer;
+    transition: 0.25s;
+}
+
+button:hover {
+    background-color: #632391;   
+}
+
+.num-students {
+    font-family: metropolisregular;
+    font-size: 1.5em;
+    color: var(--deep_purple);
+    text-align: center;
+    margin-top: 40px;
+}
+
+.num-students > strong{
+    font-family: metropolisbold;
 }
