began work on classroom css, pushed updated default confusion

--- a/public/assets/type/metropolis/metropolis.css
+++ b/public/assets/type/metropolis/metropolis.css
@@ -70,3 +70,24 @@
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'metropolislight';
+    src: url('metropolis-light-webfont.woff2') format('woff2'),
+         url('metropolis-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'metropolismedium';
+    src: url('metropolis-medium-webfont.woff2') format('woff2'),
+         url('metropolis-medium-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
