--- a/public/css/classroom.css
+++ b/public/css/classroom.css
@@ -18,14 +18,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 20px 0 0 0;
 }
 
 .title {
     font-family: metropolissemi_bold;
     font-size: 40px;
     color: var(--deep_purple);
-    padding: 0px 0;
 }
 
 #end-class {
@@ -33,10 +32,51 @@ body {
 }
 
 .confusion {
-    height: 200px;
-    width: 50%;
+    height: 400px;
+    width: 100%;
 }
 
 .confusion > * {
     margin: 0 auto;
+}
+
+.questions-header {
+    font-family: metropolissemi_bold;
+    font-size: 40px;
+    color: var(--deep_purple);
+    padding: 30px 0 0 0;
+}
+
+.questionCard {
+    margin: 10px auto;
+    padding: 20px;
+
+    background-color: rgba(255, 255, 255,0.5);
+    border: 1px solid var(--deep_purple);
+    border-radius: 10px;
+
+}
+
+.questionCard > p {
+    font-family: metropolismedium;
+    color: var(--deep_blue);
+    font-size: 1.2em;
+}
+
+.questionCard > button {
+    display: inline;
+    width: 150px;
+    border-radius: 10px;
+    padding: 8px 4px;
+    margin: 0px 0 10px 0;
+
+    font-size: 16px;
+    outline: none;
+    border-style: none;
+    font-family: metropolisbold, sans-serif;
+    background-color: var(--cool_pink);
+    color: #faf1f1;
+
+    cursor: pointer;
+    transition: 0.25s;
 }
