Added background animations to login

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -15,6 +15,7 @@
 body {
     background-color: #FEF7F7;
     font-family: metropolisbold, sans-serif;
+    position:relative;
 }
 
 .logo {
@@ -72,6 +73,7 @@ button {
 
     cursor: pointer;
     transition: 0.25s;
+    
 }
 
 button:hover {
@@ -81,8 +83,56 @@ button:hover {
 .bottom {
     font-size: 9em;
     font-weight: bold;
-    text-align: center;
+    /* text-align: center; */
     color: #e2cbe7;
     padding: 10px;
     user-select: none;
 }
+
+#login_content{
+   text-align:center;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-content: center;
+   z-index:2;
+}
+
+
+.box {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+    background-color: #1b0a28;
+  }
+  
+  .box::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 300vh;
+    height: 300vh;
+    background: #C31D6C;
+    top: -50vh;
+    transform: translateX(-25%) rotate(0deg);
+    border-radius: 45%;
+    animation: fill 7s ease-in infinite;
+  }
+  
+  @keyframes fill {
+    0% {
+      top: -300vh;
+      transform: translateX(-25%) rotate(360deg);
+    }
+    90% {
+      top: -50vh;
+      transform: translateX(-25%) rotate(0deg);
+    }
+    100% {
+      background: #1b0a28;
+    }
+  }
