--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,11 +1,33 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@import url('../assets/type/metropolis/metropolis.css');
+
+:root {
+    --bkg_white: #FEF7F7;
+    --deep_purple: #8039b4;
+    --deep_blue: #4E39B4;
+    --cool_pink: #C31D6C;
 }
 
-body {
-  background-color: #FEF7F7;
+.logo {
+  display: block;
+  width: 260px;
+  margin: 20px auto;
+}
+
+.main-ctr {
+  padding: 0 20%;
+}
+
+.top-ctr {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0 0 0;
+}
+
+.title {
+  font-family: metropolissemi_bold;
+  font-size: 40px;
+  color: var(--deep_purple);
 }
 
 #dash{
