--- a/public/css/classroom.css
+++ b/public/css/classroom.css
@@ -1,5 +1,4 @@
 @import url('../assets/type/metropolis/metropolis.css');
-
 :root {
     --bkg_white: #FEF7F7;
     --deep_purple: #8039b4;
@@ -43,7 +42,7 @@ body {
     width: 100%;
 }
 
-.confusion > * {
+.confusion>* {
     margin: 0 auto;
 }
 
@@ -57,50 +56,51 @@ body {
 .questionCard {
     margin: 10px auto;
     padding: 20px;
-
-    background-color: rgba(255, 255, 255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     border: 1px solid var(--deep_purple);
     border-radius: 10px;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: 0.25s;
 }
 
-.questionCard > p {
+.questionCard:hover {
+    border: 1px solid var(--deep_blue);
+}
+
+.questionCard>p {
     font-family: metropolismedium;
     color: var(--deep_blue);
     font-size: 1.2em;
 }
 
-.questionCard > div {
+.questionCard>div {
     float: right;
 }
 
-.questionCard > div > button {
+.questionCard>div>button {
     display: inline;
     border-radius: 10px;
     padding: 8px 16px;
     margin-right: 10px;
-
     font-size: 16px;
     outline: none;
     border-style: none;
     background-color: #3a3a3a;
     font-family: metropolisbold, sans-serif;
     color: #faf1f1;
-
     transition: 0.25s;
 }
 
-.questionCard > div > button:hover {
+.questionCard>div>button:hover {
     background-color: #3f3f3f;
 }
 
-.questionCard > div > button:first-of-type {
+.questionCard>div>button:first-of-type {
     background-color: var(--cool_pink);
 }
 
-.questionCard > div > button:first-of-type:hover {
+.questionCard>div>button:first-of-type:hover {
     background-color: #d32b7c;
 }
