--- a/public/css/login.css
+++ b/public/css/login.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-color: #FEF7F7;
+    background-color: rgba(254, 247, 247);
     font-family: metropolisbold, sans-serif;
     position:relative;
     overflow: hidden;
@@ -44,7 +44,7 @@ body {
     padding: 25px;
     border: 1px solid var(--deep_blue);
     border-radius: 10px;
-    background-color: var(--bkg_white);
+    background-color: rgba(254, 247, 247, 0.95);
 
 }
 
@@ -66,7 +66,7 @@ label {
 
 input {
     border-radius: 5px;
-    background-color: var(--bkg_white);
+    background-color: rgba(254, 247, 247,0.5);
     border: 1.1px solid  var(--deep_purple);
     padding: 10px 15px;
     width: 300px;
